examples/agent/3-fleetscope/config-sync/neg.yaml
# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: capital-agent-service
  namespace: default
  annotations:
     cloud.google.com/neg: '{"standalone": true, "name": "capital-agent-neg"}'
spec:
  type: ClusterIP
  selector:
    app: capital-agent-server
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
